# first_ecommerce_site

./: pyproject.toml  requirements.txt
myshop/: settings.py  wsgi.py
shop/templates/shop/: base.html
shop/templates/shop/product/: detail.html  list.html
staticfiles/: staticfiles.json
