[tool.poetry]
name = "E commerce Project"
version = "0.1.0"
description = "An E-commerce website"
authors = ["Uzoma Nwachukwu"]

[tool.poetry.dependencies]
requires-python = "^3.11"
# Add your dependencies here.
amqp=5.1.1
asgiref=3.7.2
billiard=4.1.0
celery=5.3.4
click=8.1.7
click-didyoumean=0.3.0
click-plugins=1.1.1
click-repl=0.3.0
colorama=0.4.6
dj-database-url=2.1.0
dj-email-url=1.0.6
Django=4.2.6
django-cache-url=3.4.4
environs=9.5.0
gunicorn=21.2.0
kombu=5.3.2
marshmallow=3.20.1
packaging=23.2
Pillow=10.0.1
prompt-toolkit=3.0.39
psycopg2==2.9.9
python-dateutil=2.8.2
python-dotenv=1.0.0
six=1.16.0
sqlparse=0.4.4
typing_extensions=4.8.0
tzdata=2023.3
vine=5.0.0
wcwidth=0.2.8
whitenoise=6.6.0
